[dev]v4.2.1
- CHANGE: Optimized lamp halo render
- CHANGE: Buttons can be inverted with shift-right-click
- FIX: Timers getting stuck on world time shifts
- FIX: Crash with pipes in unloaded chunks
- FIX: Gui textures

v4.2.0
- ADDED: ProjectRed: Mechanical package (beta)
- ADDED: Item routing system (beta)
- FIX: Version Checker spam

v4.1.0
- ADDED: Version checker
- ADDED: Option to turn off light halos
- CHANGE: Lights use torch placement rules
- CHANGE: Stained trees can only generate in overworld (too OP)
- FIX: Stained leaf decay
- FIX: Flatland generation
- FIX: Ore recipe for tools

v4.0.5
- ADDED: Ore Dictionary registration for gems
- FIX: Crash when world is not installed.

v4.0.4
- ADDED: Retroactive world generation
- ADDED: Stained trees
- CHANGE: Alloy smelter removed
- CHANGE: Only gates with torches emit light
- FIX: Toggle latch torches being off on placement

v4.0.3
- ADDED: Fixtures
- ADDED: Config option for moving all rendering to TESR
- ADDED: Gates emit light 
- FIX: Many minor bugs

v4.0.2
- ADDED: Walls for world gen blocks
- CHANGE: Ported to Minecraft 1.6.4
- CHANGE: Lights render halos in inventory
- CHANGE: Pointer recipe
- FIX: Server crash
- FIX: Analog signal re-propagation
- FIX: Illumar buttons dropping regular buttons
- FIX: Lights are always off on world load
- FIX: Container shift clicking
- FIX: Gates dont alert wires upon being rotated/configured
- FIX: State cell not saving correctly
- FIX: Bus Transceiver propagation
- FIX: Bus Transceiver lights rendering above the panel
- *FIX: ProjectRed not loading

v4.0.1
- FIX: alloy smelter crash
- FIX: Basalt is now resistant to TNT
- FIX: Red alloy wires output weak signal to neighbors.
- CHANGE: Lighting rewrite
- CHANGE: Updated license
- ADDED: Cage lamps
- ADDED: Compat module
- ADDED: Red Alloy Ingots can be created using using a Tinkers Construct Smeltery
- *FIX: server crash
- *FIX: alloy smelter render
- *FIX: wire debugger crash
- *FIX: diamond saw silicon cutting

v4.0.0