@@ -1,4 +1,5 @@
 [dev]v4.2.1
+- ADDED: Upgrade system for routing chips
 - CHANGE: Optimized lamp halo render
 - CHANGE: Buttons can be inverted with shift-right-click
 - FIX: Timers getting stuck on world time shifts
